--- a/templates/commerces.html
+++ b/templates/commerces.html
@@ -186,6 +186,22 @@
     </article>
 
     <article class="card">
+  <h2 class="title">Boucherie Piro et Fils</h2>
+  <p class="italic">"Viande choisie avec soin, conseils de quartier… et toujours un mot sympa."</p>
+  <p class="p">Artisan boucher d’Endoume, réputé pour la qualité de ses viandes et son service chaleureux. Ici, on te prépare la côtelette comme si c’était pour la famille.</p>
+  <div class="thumbs">
+    <img loading="lazy" src="/static/images/commerce/piro/1.jpeg" alt="Boucherie Piro - photo 1">
+    <img loading="lazy" src="/static/images/commerce/piro/2.png"  alt="Boucherie Piro - photo 2">
+    <img loading="lazy" src="/static/images/commerce/piro/3.jpeg" alt="Boucherie Piro - photo 3">
+  </div>
+  <div class="info">
+    📍 225 Rue d’Endoume, 13007 Marseille •
+    🗺️ <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Boucherie+Piro+225+Rue+d%27Endoume+13007">Google Maps</a> •
+    📞 <a href="tel:+33491524396">04 91 52 43 96</a>
+  </div>
+</article>
+
+    <article class="card">
       <h2 class="title">Mistralou Coquillages (écailler – place du 4 Septembre)</h2>
       <p class="italic">"Huîtres qui claquent, bulots qui rient, citron qui danse."</p>
       <p class="p">Plateaux bien frais et service souriant : parfait pour une soirée iodée à la marseillaise.</p>
