--- a/templates/commerces.html
+++ b/templates/commerces.html
@@ -121,9 +121,9 @@
     </article>
 
     <article class="card">
-      <h2 class="title">Le Trianon</h2>
+      <h2 class="title">Encore un morceau</h2>
       <p class="italic">"Millefeuille qui croque, choux qui chuchotent : le dimanche prend des airs de fête."</p>
-      <p class="p">Pâtisserie historique à deux pas du Vieux-Port côté Pasteur. Les classiques à la marseillaise, élégants et généreux.</p>
+      <p class="p">Pour les gourmands de la rue d'endoume. Les classiques à la marseillaise, élégants et généreux.</p>
       <div class="thumbs">
         <img loading="lazy" src="/static/images/commerce/eum/1.avif" alt="Le Trianon - photo 1">
         <img loading="lazy" src="/static/images/commerce/eum/2.avif" alt="Le Trianon - photo 2">
@@ -141,7 +141,7 @@
 
     <article class="card">
       <h2 class="title">Massilia Wine Shop (caviste)</h2>
-      <p class="italic">"Le soleil en bouteille, conseils aux petits oignons (avec l’accent) !"</p>
+      <p class="italic">"Le soleil en bouteille, le meilleure de la charcuterie et du fromage corse !"</p>
       <p class="p">Vins de Corse & Provence, jolies bulles, bons conseils — et livraison 7j/7 si besoin.</p>
       <div class="thumbs">
         <img loading="lazy" src="/static/images/commerce/mws/1.jpeg" alt="Massilia Wine Shop - photo 1">
@@ -157,7 +157,7 @@
 
     <article class="card">
       <h2 class="title">Chez Nénette (fabrique de pâtes fraîches)</h2>
-      <p class="italic">"Pâtes maison comme chez la nonna — les restos du coin s’y servent, toi aussi."</p>
+      <p class="italic">"Pâtes maison comme chez la nonna, les restos du coin s’y servent, toi aussi."</p>
       <p class="p">Ravioli, tagliatelles, gnocchi… qualité au top, idéal pour un dîner simple et bon à l’appart.</p>
       <div class="thumbs">
         <img loading="lazy" src="/static/images/commerce/nenette/1.jpeg" alt="Chez Nénette - photo 1">
